# tailwind_merge

./: .gitignore  .rubocop.yml  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  tailwind_merge.gemspec
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  main.yml  release.yml  tag_and_release.yml  test.yml
benchmark/: benchmark.rb
ext/tailwind_merge/: Cargo.toml  extconf.rb
ext/tailwind_merge/src/: lib.rs
lib/: tailwind_merge.rb
lib/tailwind_merge/: class_group_utils.rb  class_utils.rb  config.rb  extension.rb  modifier_utils.rb  parse_class_name.rb  sort_modifiers.rb  validators.rb  version.rb
script/: generate_changelog  test
test/: test_arbitrary_properties.rb  test_arbitrary_values.rb  test_arbitrary_variants.rb  test_cache_tampering.rb  test_class_group_conflicts.rb  test_class_map.rb  test_colors.rb  test_config.rb  test_conflicts_across_class_groups.rb  test_content_utilities.rb  test_helper.rb  test_important_modifier.rb  test_malicious_input.rb  test_modifiers.rb  test_negative_values.rb  test_non_conflicting_classes.rb  test_non_tailwind_classes.rb  test_per_side_border_colors.rb  test_prefixes.rb  test_pseudo_variants.rb  test_regexp.md  test_seperator.rb  test_standalone_classes.rb  test_tailwind_css_versions.rb  test_tailwind_merge.rb  test_theme.rb  test_thread_safety.rb  test_validators.rb
